# liberime

./: .clang_complete  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README-archive.txt  README.org  compile_commands.json  emacs-module-helpers.c  emacs-rime-bindings.c  emacs-rime.c  emacs-rime.h  erime.el  liberime-config.el  liberime-test.el  liberime.el  msys2-build.sh  rime-emacs-binding.c  rime.el  test.el
.github/workflows/: build-on-linux.yml  linux-make.yml  release.yml  test.yml
.yas/c-mode/: efun
emacs-module/: README
emacs-module/28/: emacs-module.h
emacs-module/30/: emacs-module.h
emacs-module/31/: emacs-module.h
src/: emacs-module-helpers.h  emacs-rime-bindings.c  emacs-rime.c  emacs-rime.h  init.c  interface.c  interface.h  key_table.c  key_table.h  liberime-core.c  liberime-core.h  liberime.c  liberime.h
test/: liberime-test.el  test_liberime.c
tools/: README-archive.txt  liberime-msys2-build.sh
